[tool.poetry]
name = "openllm"
version = "0.1.0"
description = ""
authors = ["Erik Gafni <egafni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.0.2"
scipy = "^1.10.1"
numpy = "^1.25.0"
openai = "^0.27.8"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
